# medivocate

./: .gitignore  README.md  RESUME.txt  app.py  dev_dependencies.txt  load_data.py  make_space.sh  output_cmp.txt  pyproject.toml  requirements.txt  tox.ini
config/: README.md
docs/: TODO.md
examples/: README.md  launch_script.sh
notebooks/: 01-SimpleRAGSystem.ipynb  02-1-GenerateEvaluationData.ipynb  02-EvaluateRAGSystem.ipynb  05-EnsemblerRetriever.ipynb  README.md
notebooks/evaluation/: 02-1-GenerateEvaluationData.ipynb  02-2-EvaluateRAGSystem.ipynb  02-3-RunEvaluation.ipynb
notebooks/reader/: 03-ReadConvertDocuments.ipynb
notebooks/tool_test/: 00-TestOllamaBehindAPIKey.ipynb
reader/: README.md  main.py
reader/src/config/: main.py  ocr_config.py
reader/src/enums/: outpy_format.py
reader/src/utils/: pdf_converter.py
reader/tests/: pdf_converter_test.py
src/: __init__.py
src/chat_interface/: chat_ui.py
src/chunking/: agents.py  chunk.py  create_vector_store.py  logs.txt  processor.py  text_cleaner.py
src/llm_evaluation/: create_evaluation_data.py  improve_generated_qa.py  llm_validator.py  prompts.py  run_llm_eval_predictions.py  show_evaluation.py
src/ocr/: README.md  main.py
src/ocr/config/: ocr_config.py
src/ocr/core/: image_handler.py  (+1 more)
src/preprocessing/: processor.py
src/prompt_engineering/: prompt_combiner.py  prompter.py  query_decomposer.py
src/rag_pipeline/: prompts.py  rag_system.py
src/utilities/: embedding.py  llm_config.ini  llm_models.py
src/vector_store/: bivector_store.py  prompts.py  vector_store.py
(+18 files in other folders)
